Don't use fixed heights 🔥
Just don't. It makes life hard and doesn't solve the problem properly.

Now, when the content doesn't fit within the screen width, it will flow naturally and not jump up and down all over other elements.

--- a/app/webpacker/css/admin/products_v3.scss
+++ b/app/webpacker/css/admin/products_v3.scss
@@ -220,9 +220,6 @@
     justify-content: space-between;
     align-items: center;
 
-    line-height: $btn-relaxed-height;
-    height: $btn-relaxed-height;
-
     &.disabled-section {
       display: none;
     }
